syntax = "proto3";
package flo_common;

message Version {
  int32 major = 1;
  int32 minor = 2;
  int32 patch = 3;
}